--- a/fs3.yaml
+++ b/fs3.yaml
@@ -41,7 +41,7 @@ Resources:
         CustomErrorResponses:
           - ErrorCode: 403 # not found
             ResponseCode: 404
-            ResponsePagePath: 'error.html'
+            ResponsePagePath: error.html
         DefaultCacheBehavior:
           AllowedMethods:
             - GET
